2008-08-27  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-timer.c: Minor cleanup.

2008-08-24  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-listener.c: I_() macro was a bad idea.
	* po/POTFILES.skip: Remove mt-listener.c again.

2008-08-24  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Add multiscreen support and generate events
	with XTest instead of AT-SPI.
	* src/mt-main.h: Add variables.
	* src/mt-ctw.c: (mt_ctw_update_visibility): Map click-type window
	on the current screen.
	* configure.ac: Add xtst check.

2008-08-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:(cursor_overlay_time):
	* src/mt-ctw.c:
	* src/mt-ctw.h:

	Use theme colors for the cursor overlay. Looks nicer and works
	better with dark cursor themes.

2008-08-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-cursor.c: Don't show a critical warning if a cursor
	has no name.

2008-08-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	Improve a workaround for secondary clicks that caused 
	problems with window frames and desktop icons. See bug #532934.

	* src/mt-main.h: Listen for focus changes.
	* src/mt-main.h: Add 'move-release' variable.

	* src/Makefile.am: Add new files.
	* src/mt-accessible.c: New file.
	* src/mt-accessible.h: New file.
	Add AT-SPI utility functions. Most of them aren't
	used yet.

2008-08-22 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-listener.c:
	* src/mt-listener.h:
	Create a MtListener object and move all at-spi signal related
	things to a new file.

	* src/mt-main.c: Use new listener object.
	* src/Makefile.am: Add new files.
	* po/POTFILES.skip: Add mt-listener.c

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:(mt_main_request_logout): Fix argument type.

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* confiure.ac: remove libgnome and libgnomeui dependency
	* src/Makefile.am: use per-file CFLAGS.
	* src/mt-main.c: remove last bits of libgnome and libgnomeui

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>
